Files moved to core to do template

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -53,7 +53,7 @@
 
     <br>
 
-    <mk-alert *ngIf="error" backgroundColor="danger" [isDismissible]="false" [dismissOnTimeout]="3000">    
+    <mk-alert *ngIf="error" backgroundColor="danger" [isDismissible]="true">    
       Usuario o contraseña incorrecto
     </mk-alert>
 
