--- a/src/app/core/core.component.html
+++ b/src/app/core/core.component.html
@@ -4,8 +4,8 @@
 <ng-template #noCustomLayout>
   <mk-layout-wrapper>
     <mk-layout-header logoLink="/">
-      <mk-layout-header-logo><b>Angular </b>AdminLTE</mk-layout-header-logo>
-      <mk-layout-header-logo-mini><b>A</b>LTE</mk-layout-header-logo-mini>
+      <mk-layout-header-logo><b>Cosecha </b>Express</mk-layout-header-logo>
+      <mk-layout-header-logo-mini><b>C</b>EX</mk-layout-header-logo-mini>
       <app-header-inner></app-header-inner>
     </mk-layout-header>
     <mk-layout-sidebar-left>
@@ -24,7 +24,7 @@
     </mk-layout-content>
     <mk-layout-footer>
       <mk-layout-footer-left>
-        <strong>Powered by <a href="http://almsaeedstudio.com/%22%3EAdminLte"></a>/a>.</strong>
+        <strong>Powered by <a href="http://almsaeedstudio.com/%22%3EAdminLte"></a></strong>
       </mk-layout-footer-left>
       <mk-layout-footer-right>
         <b>Version</b> 2.4.2
