--- a/src/app/core/header-inner/header-inner.component.html
+++ b/src/app/core/header-inner/header-inner.component.html
@@ -224,7 +224,7 @@
       <mk-dropdown-toggle>
         <a #toggleElement>
           <img src="assets/img/user2-160x160.jpg" class="user-image" alt="User Image">
-          <span class="hidden-xs">Alexander Pierce</span>
+          <span class="hidden-xs">{{currentUser.usuario.nombre_empleado}}</span>
         </a>
       </mk-dropdown-toggle>
       <mk-dropdown-menu>
@@ -232,29 +232,15 @@
       <img src="assets/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
       <p>
-        Alexander Pierce - Web Developer
-        <small>Member since Nov. 2012</small>
+        {{currentUser.usuario.nombre_empleado}}
       </p>
-    </li>
-    <li class="user-body">
-      <div class="row">
-        <div class="col-xs-4 text-center">
-          <a href="#">Followers</a>
-        </div>
-        <div class="col-xs-4 text-center">
-          <a href="#">Sales</a>
-        </div>
-        <div class="col-xs-4 text-center">
-          <a href="#">Friends</a>
-        </div>
-      </div>
     </li>
     <li class="user-footer">
       <div class="pull-left">
-        <a href="#" class="btn btn-default btn-flat">Profile</a>
+        <a routerLink="/perfil" routerLinkActive="active" class="btn btn-default btn-flat">Perfil</a>
       </div>
       <div class="pull-right">
-        <a href="#" class="btn btn-default btn-flat">Sign out</a>
+        <a href="#" class="btn btn-default btn-flat">Cerrar Sesion</a>
       </div>
     </li>
     </mk-dropdown-menu>
