Pending fix login

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -52,7 +52,7 @@
 
     <br>
 
-    <mk-alert *ngIf="error" backgroundColor="danger" [isDismissible]="true">    
+    <mk-alert *ngIf="error"  backgroundColor="danger" isDismisible="false">    
       Usuario o contraseña incorrecto
     </mk-alert>
 
