--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -22,11 +22,8 @@
         </div>
 
         <div class="form-group">
-            <label for="contrasena">Contraseña</label>
-            <input type="password" id="contrasena" formControlName="contrasena" required class="form-control" />
-            <div *ngIf="submitted && f.contrasena.errors" class="invalid-feedback">
-                <div *ngIf="f.contrasena.errors.required" class="text-danger">La contraseña es requerida</div>
-            </div>
+            <label for="contrasena">Nueva Contraseña</label>
+            <input type="password" id="contrasena" formControlName="contrasena" required="false" class="form-control" />
         </div>
 
         <!--
