--- a/src/app/core/header-inner/header-inner.component.html
+++ b/src/app/core/header-inner/header-inner.component.html
@@ -240,7 +240,7 @@
         <a routerLink="/perfil" routerLinkActive="active" class="btn btn-default btn-flat">Perfil</a>
       </div>
       <div class="pull-right">
-        <a href="#" class="btn btn-default btn-flat">Cerrar Sesion</a>
+        <a (click)="logout()" class="btn btn-default btn-flat">Cerrar Sesion</a>
       </div>
     </li>
     </mk-dropdown-menu>
