--- a/src/app/core/sidebar-left-inner/sidebar-left-inner.component.html
+++ b/src/app/core/sidebar-left-inner/sidebar-left-inner.component.html
@@ -3,16 +3,8 @@
     <img src="assets/img/user2-160x160.jpg" class="img-circle" alt="User Image">
   </div>
   <div class="pull-left info">
-    <p>Alexander Pierce</p>
-    <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+    <p>{{currentUser.usuario.nombre_empleado}}</p>
+    <a><i class="fa fa-circle text-success"></i> En linea</a>
   </div>
 </div>
-<form class="sidebar-form">
-  <div class="input-group">
-    <input type="text" name="q" class="form-control" placeholder="Search...">
-    <span class="input-group-btn">
-      <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-      </button>
-    </span>
-  </div>
-</form>
+
