--- a/src/app/core/core.component.html
+++ b/src/app/core/core.component.html
@@ -21,10 +21,10 @@
     </mk-layout-content>
     <mk-layout-footer>
       <mk-layout-footer-left>
-        <strong>Powered by <a href="#"></a></strong>
+        <strong>Cosecha Express <a href="#"></a></strong>
       </mk-layout-footer-left>
       <mk-layout-footer-right>
-        <b>Version</b> 2.4.2
+        <b>Version</b> 0.0.1
       </mk-layout-footer-right>
     </mk-layout-footer>
   </mk-layout-wrapper>
