--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -9,3 +9,21 @@
 .background-header {
     background: #008d4c;
 }
+
+.search-box {
+    padding: 8px;
+  }
+
+  .search-box input {
+    width: 188px;
+    margin-bottom: 8px;
+    display: block;
+  }
+
+  .search-box button {
+    width: 90px;
+  }
+
+  .search-button {
+    margin-right: 8px;
+  }
